# bobbi-the-watchdog

./: .gitignore  CDC.docx  Dockerfile  README.md  clamd.conf  data_structures_analysis_report.md  docker-compose.yml  docker-entrypoint.sh  network_log.txt  pyproject.toml  run_container.sh
Test/: README.md  flood.sh  https-server.py  key.pem
Test/certs/: cert.pem
captured_files/: captured_file
scripts/: run_container.sh
src/bobbi_the_watchdog/: __init__.py  main.py  network_log.txt
src/bobbi_the_watchdog/config/: config.py
src/bobbi_the_watchdog/core/: malware_detection.py  packet_capture.py  threat_detection.py
